--- a/package.json
+++ b/package.json
@@ -77,7 +77,12 @@
     "three": "^0.171.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
-    "ethers": "^6.13.0"
+    "ethers": "^6.13.0",
+    "@solana/web3.js": "^1.95.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/spl-token": "^0.4.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
