--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/spl-token": "^0.4.8"
+    "@solana/spl-token": "^0.4.8",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
